# parsing_crypto

./: pyproject.toml
data/raw/binance/: binance_btcusdt_2026-04-01_15-20-04.csv  binance_btcusdt_bid_2026-04-10_17-58-01.csv  binance_btcusdt_bid_2026-04-10_18-02-17.csv  binance_btcusdt_bid_2026-04-15_14-13-37.csv  binance_btcusdt_bid_2026-04-23_10-56-12.csv  binance_solusdt_bid_2026-04-15_14-04-49.csv
data/raw/polymarket/: polymarket_btcusdt_2026-04-01_15-20-04.csv  polymarket_btcusdt_2026-04-10_17-58-01.csv  polymarket_btcusdt_2026-04-10_18-02-17.csv  polymarket_btcusdt_2026-04-15_14-13-37.csv  polymarket_btcusdt_2026-04-23_10-56-12.csv  polymarket_solusdt_2026-04-15_14-04-49.csv
src/app_websocket/: get_market.py  plot_csv.py  plot_from_raw.py  run_both.py  socket_binance.py  socket_client.py  socket_polymarket.py  socket_server.py
