[project]
name = "app-websocket"
version = "0.1.0"
description = ""
authors = [
    {name = "traderDan",email = "traderdaniil@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app_websocket", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
